--- a/react_app/src/assets/style/index.css
+++ b/react_app/src/assets/style/index.css
@@ -13,3 +13,7 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+:root {
+    --contexify-menu-minWidth: 100px !important;
+}
