--- a/react_app/src/assets/style/index.css
+++ b/react_app/src/assets/style/index.css
@@ -18,3 +18,34 @@ code {
 :root {
     --contexify-menu-minWidth: 100px !important;
 }
+
+*::-webkit-scrollbar {
+    height: 5px;
+    width: 5px;
+    margin: 3px 2px;
+}
+*::-webkit-scrollbar-track {
+    border-radius: 5px;
+    background-color: #dfe9eb;
+}
+
+*::-webkit-scrollbar-track:hover {
+    background-color: #b8c0c2;
+}
+
+*::-webkit-scrollbar-track:active {
+    background-color: #b8c0c2;
+}
+
+*::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #7b7b7b;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: #a33023;
+}
+
+*::-webkit-scrollbar-thumb:active {
+    background-color: #a33023;
+}
