--- a/react_app/src/assets/style/index.css
+++ b/react_app/src/assets/style/index.css
@@ -4,15 +4,12 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     max-width: 100vw;
+    background: black;
 }
 
 * {
     margin: 0;
     padding: 0;
-}
-
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 :root {
